--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "courseplanner",
-  "version": "2.0.0",
+  "version": "3.0.0",
   "description": "**CoursePlanner** is a simple client-side web app intended to assist students plan their upcoming courses.",
   "main": "index.jsx",
   "scripts": {
     "dev": "webpack-dev-server --mode development",
     "build": "webpack --mode production",
-    "clean": "rm -rf dist"
+    "clean": "rm -rf public/dist"
   },
   "repository": {
     "type": "git",
@@ -20,11 +20,15 @@
   },
   "homepage": "https://github.com/theyer/CoursePlanner#readme",
   "dependencies": {
+    "@babel/runtime": "^7.11.2",
     "@fullcalendar/core": "^4.4.0",
     "@fullcalendar/daygrid": "^4.4.0",
     "@fullcalendar/react": "^4.4.0",
     "@fullcalendar/timegrid": "^4.4.0",
-    "axios": "^0.19.2",
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
+    "firebase": "^7.19.0",
+    "firebaseui": "^4.6.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-hot-loader": "^4.12.20"
@@ -32,6 +36,7 @@
   "devDependencies": {
     "@babel/cli": "^7.1.0",
     "@babel/core": "^7.1.0",
+    "@babel/plugin-transform-runtime": "^7.11.0",
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.2",
